--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
     defaultConfig {
         applicationId "com.tocaboca.tocalifeworldi"
         minSdk 26
-        multiDexEnabled true
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -49,25 +48,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation "io.insert-koin:koin-android:3.3.0"
-    implementation 'com.google.android.gms:play-services-appset:16.0.2'
-    implementation 'com.airbnb.android:lottie:5.0.3'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
-    implementation 'com.facebook.android:facebook-android-sdk:13.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation "com.appsflyer:af-android-sdk:6.9.0"
     implementation "com.squareup.okhttp3:okhttp:{latest-version}"
     implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     implementation "androidx.gridlayout:gridlayout:1.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
@@ -79,5 +66,17 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     implementation 'com.my.tracker:mytracker-sdk:3.0.+'
     implementation 'com.android.support:multidex:1.0.3'
-
+    implementation 'com.google.android.gms:play-services-appset:16.0.2'
+    implementation 'com.airbnb.android:lottie:5.0.3'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
